<resources>
    <string name="app_name">AndroAnim</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Retype Password</string>
    <string name="hint_phone">Phone Number</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_address">Enter your address</string>
    <string name="err_msg_phone">Enter your phone number</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_repassword">Incorrect Password</string>
</resources>
