<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


    <ViewFlipper
        android:id="@+id/simpleViewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

    <!--page 1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
         >

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/colortext" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
>

            <EditText
                android:id="@+id/input_phone"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:textColor="@color/colortext" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:text="NEXT"
            android:textColor="@color/text" />

    </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@color/colortext"
                 />
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/colortext" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_repassword"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

        <EditText
            android:id="@+id/input_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_repassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/colortext" />
    </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            >

            <EditText
                android:textColor="@color/colortext"
                android:id="@+id/input_address"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="Address" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonNext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:text="NEXT"
            android:textColor="@color/text" />
    </LinearLayout>
</ScrollView>
     <!--page3-->
        <LinearLayout
            android:padding="20dp"
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colortext"

                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Rate Your Taste !"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sweet"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colortext"
                    />
                <SeekBar
                    android:id="@+id/seekBarSweet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:thumb="@drawable/base"
                    android:layout_marginTop="5dp"
                    android:progress="0"
                    android:thumbTintMode="multiply"
                    android:max="20" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salty"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colortext"
                    />
                <SeekBar
                    android:id="@+id/seekBarSalty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:thumb="@drawable/base"
                    android:progress="0"
                    android:thumbTintMode="multiply"
                    android:max="20" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hot"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colortext"
                    />

                <SeekBar
                    android:id="@+id/seekBarHot"
                    android:layout_width="match_parent"
                    android:thumb="@drawable/base"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:progress="0"
                    android:thumbTintMode="multiply"
                    android:max="20" />

            <Button
                android:id="@+id/buttonNext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape"
                android:text="create account"
                android:textColor="@color/text" />

        </LinearLayout>

    </ViewFlipper>
    </LinearLayout>
    </layout>